[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanguard-x"
version = "0.1.0"
description = "Autonomous agentic pentesting & continuous security monitoring platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "John Sebastian Camargo", email = "0xvanguard@protonmail.com" },
]
keywords = ["pentesting", "security", "agentic", "continuous-monitoring", "nis2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy>=2.0.30,<3",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
    "structlog>=24.1,<25",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "jinja2>=3.1,<4",
    # Continuous monitoring scheduler (Month 2 — `monitor` subcommand).
    # 3.x is stable and ships AsyncIOScheduler; 4.x is still beta.
    "apscheduler>=3.10,<4",
    # LLM integration (Phase 3 — analysis engine).
    "anthropic>=0.39,<1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1"]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
vanguard-x = "vanguard_x.__main__:app"

[project.urls]
Homepage = "https://github.com/0xvanguard/VANGUARD-X"
Repository = "https://github.com/0xvanguard/VANGUARD-X"

# ----- setuptools ------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vanguard_x = ["py.typed"]

# ----- ruff ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # flake8-bandit (security)
    "ASYNC",         # async correctness
    "RUF",
]
ignore = [
    "S101",      # asserts allowed in tests
    "S603",      # subprocess use is core to a pentest tool
    "S607",      # partial executable paths fine for documented tools
    "ASYNC109",  # async functions with `timeout` arg are intentional in our runners
    "ASYNC240",  # tiny stat() calls in notifier do not warrant trio/anyio.Path
    "RUF012",    # SQLAlchemy `type_annotation_map` is a class-level constant, not mutable state
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

# ----- pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=vanguard_x",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

# ----- coverage --------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["vanguard_x"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ----- mypy ------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# APScheduler has no upstream type stubs.
module = "apscheduler.*"
ignore_missing_imports = true
